@@ -1,39 +1,26 @@
 package io.github.scuba10steve.s3.advanced.crafting;
 
+import io.github.scuba10steve.s3.advanced.blockentity.AutoCrafterBlockEntity;
+import io.github.scuba10steve.s3.advanced.blockentity.RecipeMemoryBoxBlockEntity;
 import io.github.scuba10steve.s3.storage.StorageInventory;
-import net.minecraft.core.BlockPos;
 import net.minecraft.world.item.ItemStack;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.util.*;
+import java.util.HashSet;
+import java.util.LinkedList;
+import java.util.List;
+import java.util.Map;
+import java.util.Queue;
+import java.util.Set;
 
 public class CraftingCoordinator {
 
     private static final Logger LOGGER = LoggerFactory.getLogger(CraftingCoordinator.class);
 
-    /**
-     * Snapshot of one Recipe Memory Box: its world position and pattern list.
-     * Passed into tick() to avoid a circular crafting ↔ blockentity dependency.
-     */
-    public record BoxData(BlockPos pos, List<RecipePattern> patterns) {
-        public RecipePattern get(int index) {
-            if (index < 0 || index >= patterns.size()) {
-                return null;
-            }
-            return patterns.get(index);
-        }
-    }
-
-    /**
-     * Snapshot of one Auto-Crafter: its assignment map.
-     * Passed into tick() to avoid a circular crafting ↔ blockentity dependency.
-     */
-    public record CrafterData(Map<PatternKey, PerPatternConfig> assignments) {}
-
     private final CraftingEngine craftingEngine;
     private final Queue<CraftingJob> queue = new LinkedList<>();
-    private final Set<PatternKey> pendingAutoBuffer = new HashSet<>();
+    private final Set<CrafterSlot> pendingAutoBuffer = new HashSet<>();
 
     public CraftingCoordinator(CraftingEngine craftingEngine) {
         this.craftingEngine = craftingEngine;
@@ -41,102 +28,87 @@ public class CraftingCoordinator {
 
     /**
      * Enqueues a crafting job.
-     * AUTO_BUFFER jobs are deduplicated by patternKey — if one is already outstanding,
-     * the new request is silently dropped.
+     * AUTO_BUFFER jobs are deduplicated by CrafterSlot; duplicates are silently dropped.
      * GUI_REQUEST jobs are never deduplicated.
      */
-    public void enqueue(PatternKey patternKey, int quantity, CraftingSource source) {
+    public void enqueue(CrafterSlot slot, int quantity, CraftingSource source) {
         if (source == CraftingSource.AUTO_BUFFER) {
-            if (pendingAutoBuffer.contains(patternKey)) {
-                return;
-            }
-            pendingAutoBuffer.add(patternKey);
+            if (pendingAutoBuffer.contains(slot)) return;
+            pendingAutoBuffer.add(slot);
         }
-        queue.add(new CraftingJob(patternKey, quantity, source));
+        queue.add(new CraftingJob(slot, quantity, source));
     }
 
-    /** Returns the current number of pending jobs. */
-    public int getQueueSize() {
-        return queue.size();
-    }
+    public int getQueueSize() { return queue.size(); }
 
     /**
-     * Called each server tick. Checks auto-buffer thresholds and dispatches queued jobs.
+     * Called each server tick.
+     * Checks auto-buffer thresholds for all paired (RMB, AutoCrafter) entries,
+     * then dispatches queued jobs.
      *
-     * @param inventory  The multiblock's shared StorageInventory.
-     * @param boxes      Snapshot of all Recipe Memory Boxes (patterns by box position).
-     * @param crafters   Snapshot of all Auto-Crafters (assignments per crafter).
+     * @param inventory    The multiblock's shared StorageInventory.
+     * @param rmbToCrafter Resolved pairs from AdvancedStorageCoreBlockEntity.scanMultiblock().
      */
-    public boolean tick(StorageInventory inventory, List<BoxData> boxes, List<CrafterData> crafters) {
+    public boolean tick(StorageInventory inventory,
+                        Map<RecipeMemoryBoxBlockEntity, AutoCrafterBlockEntity> rmbToCrafter) {
         boolean crafted = false;
-        // 1. Auto-buffer check: enqueue jobs for patterns below their minimum buffer.
-        for (CrafterData crafter : crafters) {
-            for (Map.Entry<PatternKey, PerPatternConfig> entry : crafter.assignments().entrySet()) {
-                PatternKey key = entry.getKey();
-                PerPatternConfig config = entry.getValue();
-                if (!config.autoEnabled()) {
-                    continue;
-                }
-                if (pendingAutoBuffer.contains(key)) {
-                    continue;
-                }
 
-                RecipePattern pattern = resolvePattern(key, boxes);
-                if (pattern == null) {
-                    continue;
-                }
-
+        // 1. Auto-buffer check
+        for (Map.Entry<RecipeMemoryBoxBlockEntity, AutoCrafterBlockEntity> entry : rmbToCrafter.entrySet()) {
+            RecipeMemoryBoxBlockEntity rmb = entry.getKey();
+            AutoCrafterBlockEntity crafter = entry.getValue();
+            for (int i = 0; i < AutoCrafterBlockEntity.SLOT_COUNT; i++) {
+                CrafterSlot slot = new CrafterSlot(crafter.getBlockPos(), i);
+                PerPatternConfig config = crafter.getConfigs()[i];
+                if (!config.autoEnabled() || pendingAutoBuffer.contains(slot)) continue;
+                RecipePattern pattern = rmb.getPattern(i);
+                if (pattern == null || pattern.isEmpty()) continue;
                 int current = countItem(inventory, pattern.getOutput());
                 if (current < config.minimumBuffer()) {
-                    enqueue(key, 1, CraftingSource.AUTO_BUFFER);
+                    enqueue(slot, 1, CraftingSource.AUTO_BUFFER);
                 }
             }
         }
 
-        // 2. Dispatch: drain the queue, resolve pattern, find a crafter, execute.
+        // 2. Dispatch queued jobs
         while (!queue.isEmpty()) {
             CraftingJob job = queue.poll();
-            LOGGER.debug("[Coordinator] Dispatching job patternKey={} qty={} source={}", job.patternKey(), job.quantity(), job.source());
             if (job.source() == CraftingSource.AUTO_BUFFER) {
-                pendingAutoBuffer.remove(job.patternKey());
+                pendingAutoBuffer.remove(job.crafterSlot());
             }
 
-            RecipePattern pattern = resolvePattern(job.patternKey(), boxes);
-            if (pattern == null) {
-                LOGGER.debug("[Coordinator] DROPPED: resolvePattern returned null for {} (boxes={})", job.patternKey(), boxes.stream().map(BoxData::pos).toList());
-                continue; // pattern box removed — drop job
+            // Find the RMB paired to this crafter
+            RecipeMemoryBoxBlockEntity rmb = null;
+            for (Map.Entry<RecipeMemoryBoxBlockEntity, AutoCrafterBlockEntity> entry : rmbToCrafter.entrySet()) {
+                if (entry.getValue().getBlockPos().equals(job.crafterSlot().crafterPos())) {
+                    rmb = entry.getKey();
+                    break;
+                }
             }
-            boolean hasCrafter = crafters.stream()
-                .anyMatch(c -> c.assignments().containsKey(job.patternKey()));
-            if (!hasCrafter) {
-                LOGGER.debug("[Coordinator] DROPPED: no crafter assigned for {} (crafter keys={})",
-                    job.patternKey(), crafters.stream().flatMap(c -> c.assignments().keySet().stream()).toList());
-                continue; // no crafter assigned — drop job
+            if (rmb == null) {
+                LOGGER.debug("[Coordinator] DROPPED: no paired RMB for crafter {}", job.crafterSlot().crafterPos());
+                continue;
             }
-            List<ItemStack> ingredients = Arrays.asList(pattern.getGrid());
+
+            RecipePattern pattern = rmb.getPattern(job.crafterSlot().slotIndex());
+            if (pattern == null || pattern.isEmpty()) {
+                LOGGER.debug("[Coordinator] DROPPED: empty pattern at slot {}", job.crafterSlot().slotIndex());
+                continue;
+            }
+
+            List<ItemStack> ingredients = List.of(pattern.getGrid());
             for (int i = 0; i < job.quantity(); i++) {
                 boolean success = craftingEngine.execute(ingredients, pattern.getOutput(), inventory);
-                LOGGER.debug("[Coordinator] execute iteration {}/{}: {}", i + 1, job.quantity(), success ? "OK" : "FAILED (missing ingredients)");
-                if (success) {
-                    crafted = true;
-                } else {
-                    break; // missing ingredients — stop this job without retry
-                }
+                LOGGER.debug("[Coordinator] execute iteration {}/{}: {}", i + 1, job.quantity(), success ? "OK" : "FAILED");
+                if (success) crafted = true;
+                else break;
             }
         }
         return crafted;
     }
 
-    /**
-     * Counts the number of items in storage matching the given template
-     * (same item type and components).
-     * StorageInventory has no countItem() method; we iterate getStoredItems()
-     * and sum counts for matching entries.
-     */
     private int countItem(StorageInventory inventory, ItemStack template) {
-        if (template.isEmpty()) {
-            return 0;
-        }
+        if (template.isEmpty()) return 0;
         long total = 0;
         for (var stored : inventory.getStoredItems()) {
             if (ItemStack.isSameItemSameComponents(stored.getItemStack(), template)) {
@@ -144,15 +116,5 @@ public class CraftingCoordinator {
             }
         }
         return (int) Math.min(total, Integer.MAX_VALUE);
-    }
-
-    private RecipePattern resolvePattern(PatternKey key, List<BoxData> boxes) {
-        for (BoxData box : boxes) {
-            if (box.pos().equals(key.pos())) {
-                RecipePattern p = box.get(key.index());
-                return p != null && !p.isEmpty() ? p : null;
-            }
-        }
-        return null;
     }
 }
